$Id: History,v 1.87 2002-10-29 18:40:25 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 29th, 2002       J. Apostolakis - geomvol-V04-01-05
- G4PropagatorInField
  Re-introduced memory of Charge Mass and Momentum into PropagatorInField,
  in order for it to message the correct ChordFinder at each step with this
  information.  It now does this task.

Aug  6th, 2002       G. Cosmo - geomvol-V04-01-04
- Formatting cleanup in source implementation files.

Jul 29th, 2002       G. Cosmo - geomvol-V04-01-03
- G4PropagatorInField[.hh.icc.cc]:
  Restored call to GetChordFinder()->SetChargeMomentumMass() in method
  SetChargeMomentumMass(), as was originally in release 4.1.
  All modifications introduced in tag "geomvol-V04-00-11" have now been removed.

Jul 29th, 2002       G. Cosmo - geomvol-V04-01-02
- G4PropagatorInField.cc:  (J.Apostolakis)
  o Restored ComputeStep() as it was before tag "geomvol-V04-00-11", by
    removing call to GetChordFinder()->SetChargeMomentumMass().
    This call was responsible for failure of unit tests, where no field strength
    was observed in some cases.
  o Set 'fNoZeroStep' to zero if (fNoZeroStep > fAbandonThreshold_NoZeroSteps)