@@ -1,0 +1,66 @@
+//
+// ********************************************************************
+// * DISCLAIMER                                                       *
+// *                                                                  *
+// * The following disclaimer summarizes all the specific disclaimers *
+// * of contributors to this software. The specific disclaimers,which *
+// * govern, are listed with their locations in:                      *
+// *   http://cern.ch/geant4/license                                  *
+// *                                                                  *
+// * Neither the authors of this software system, nor their employing *
+// * institutes,nor the agencies providing financial support for this *
+// * work  make  any representation or  warranty, express or implied, *
+// * regarding  this  software system or assume any liability for its *
+// * use.                                                             *
+// *                                                                  *
+// * This  code  implementation is the  intellectual property  of the *
+// * GEANT4 collaboration.                                            *
+// * By copying,  distributing  or modifying the Program (or any work *
+// * based  on  the Program)  you indicate  your  acceptance of  this *
+// * statement, and all its terms.                                    *
+// ********************************************************************
+//
+//
+// $Id: G4VCurvedTrajectoryFilter.cc,v 1.1 2002-11-09 00:25:09 jacek Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+
+#include "G4VCurvedTrajectoryFilter.hh"
+#include "G4PropagatorInField.hh"
+
+
+G4std::vector<G4ThreeVector>* 
+G4VCurvedTrajectoryFilter::GimmeThePointsAndForgetThem() {
+  G4std::vector<G4ThreeVector>* tmp = fpFilteredPoints;
+  // ParticleChangeForTransport invokes this method (via
+  // PropagatorInField) at every Step, even if the step did not
+  // involve PropagatorInField. Must, therefore, ensure that points
+  // submitted by previous invocations of PIF are not
+  // copied. Therefore the points must be cleared. (Note that the
+  // responsibility for deleting the vector lies with the
+  // SmoothTrajctoryPoint, which is the vector's final destination.)
+  // (jacek 08/11/2002)
+  fpFilteredPoints = NULL;
+  return tmp;
+}
+
+
+void
+G4VCurvedTrajectoryFilter::TakeIntermediatePoint( G4ThreeVector newPoint ) {
+  // Just store every single point, initially. (jacek 30/10/2002)
+  // Implement more sophisticated filters later.  Copy by value into
+  // the vector; the vector will never be copied by value itself. In
+  // the final version, will probably want to create the intermediate
+  // points at this stage.
+  fpFilteredPoints->push_back( newPoint );
+}
+
+void
+G4VCurvedTrajectoryFilter::CreateNewTrajectorySegment( ) {
+  if (fpFilteredPoints) {
+    // GimmePoints has not been called (it would have set the
+    // pointer to NULL), therefore nobody has taken charge of the
+    // points and they will never be deleted!
+    cout << "!!!!!!!! Filter: auxliary points are being memory leaked !!!!!" << endl;
+  }
+  fpFilteredPoints = new G4std::vector<G4ThreeVector>;
+}    
